<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorOrange"
    tools:context=".FormForEditionalWorkDayActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_choosAction"
        android:textColor="@color/colorVioletDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llSick"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Switch
            android:id="@+id/switchSick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBordo"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tv_ifSick" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llVacation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Switch
            android:id="@+id/switchVacation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBordo"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tv_ifVacation" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/llShift"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Switch
            android:id="@+id/switchShift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBordo"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tv_changeShift" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdditionalTime"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Switch
            android:id="@+id/switchAdditionalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBordo"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tv_changeinform" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Switch
            android:id="@+id/switchClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorBordo"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/tv_switchClear" />

    </LinearLayout>
</LinearLayout>