<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOrange"
        android:paddingTop="26dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="296dp"
            android:layout_height="132dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/ivTitle" />

        <!-- Email Label -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <EditText android:id="@+id/input_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="22dp"
                android:hint="@string/hint_firstname"
                android:textColor="@color/colorBordo"
                android:textColorHint="@color/colorBordo"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <EditText android:id="@+id/input_surName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="22dp"
                android:hint="@string/hint_surname"
                android:textColor="@color/colorBordo"
                android:textColorHint="@color/colorBordo"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <EditText android:id="@+id/input_telefon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="22sp"
                android:hint="@string/hint_numbertelefon"
                android:textColor="@color/colorBordo"
                android:textColorHint="@color/colorBordo"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="22sp"
                android:hint="@string/hint_email"
                android:textColor="@color/colorBordo"
                android:textColorHint="@color/colorBordo"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">



            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textSize="22sp"
                android:textColor="@color/colorBordo"
                android:textColorHint="@color/colorBordo"/>
        </LinearLayout>

        <Button
            android:id="@+id/_registrButton"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btnred"
            android:padding="12dp"
            android:text="@string/button_registration"
            android:textColor="@color/colorYellow"
            android:textSize="19sp" />



    </LinearLayout>
</LinearLayout>